Add rudimentary support for .java, .html, .properties files (#10)
* Add rudimentary support for .java, .html, .properties files

* Identify #11 test case in Java

Explicit on* attribute names based on HTML5 spec
Make patterns case-insensitive
Simplify event handler in Java file pattern
Remove lookbehinds to improve performance
Adapt test cases to slightly changed behavior

* Add support for FormApply#applyResponse

* Use consistent ordering of output for easier comparison

* Find line numbers

* Find line numbers

* Address false positive

* More robust file reading: If UTF-8 fails, try Latin-1

---------

Co-authored-by: Daniel Beck <daniel-beck@users.noreply.github.com>